Updated EN translations: names, produce

--- a/src/modules/dialog/locale/en_us/names.json
+++ b/src/modules/dialog/locale/en_us/names.json
@@ -11,6 +11,70 @@
     {
       "jp": "はづき",
       "tl": "Hazuki"
+    },
+    {
+      "jp": "真乃",
+      "tl": "Mano"
+    },
+    {
+      "jp": "灯織",
+      "tl": "Hiori"
+    },
+    {
+      "jp": "めぐる",
+      "tl": "Meguru"
+    },
+    {
+      "jp": "摩美々",
+      "tl": "Mamimi"
+    },
+    {
+      "jp": "霧子",
+      "tl": "Kiriko"
+    },
+    {
+      "jp": "恋鐘",
+      "tl": "Kogane"
+    },
+    {
+      "jp": "結華",
+      "tl": "Yuika"
+    },
+    {
+      "jp": "咲耶",
+      "tl": "Sakuya"
+    },
+    {
+      "jp": "甘奈",
+      "tl": "Amana"
+    },
+    {
+      "jp": "千雪",
+      "tl": "Chiyuki"
+    },
+    {
+      "jp": "甜花",
+      "tl": "Tenka"
+    },
+    {
+      "jp": "凛世",
+      "tl": "Rinze"
+    },
+    {
+      "jp": "智代子",
+      "tl": "Chiyoko"
+    },
+    {
+      "jp": "果穂",
+      "tl": "Kaho"
+    },
+    {
+      "jp": "樹里",
+      "tl": "Juri"
+    },
+    {
+      "jp": "夏葉",
+      "tl": "Natsuha"
     }
   ]
 }
