README.md badges + en fix

--- a/src/modules/dialog/locale/en_us/produce.json
+++ b/src/modules/dialog/locale/en_us/produce.json
@@ -222,7 +222,7 @@
     },
     {
       "jp": "櫻木真乃、１6歳です\r\nこれからよろしくお願いしますね",
-      "en": "Mano Sakuraki, 16 years old. let's give our best from now on"
+      "en": "Mano Sakuragi, 16 years old. let's give our best from now on"
     }
   ]
 }
