Fix dialog translation key

--- a/src/modules/dialog/locale/en_us/produce.json
+++ b/src/modules/dialog/locale/en_us/produce.json
@@ -2,227 +2,227 @@
   "messages": [
     {
       "jp": "（２８３プロダクションに入社して数か月……\r\nいよいよ俺が、アイドルをプロデュースする時が来た）",
-      "en": "It has been a couple months since I've joined 283 productions and the time to produce an idol has come."
+      "tl": "It has been a couple months since I've joined 283 productions and the time to produce an idol has come."
     },
     {
       "jp": "（ずっと憧れていた仕事をようやく任されたんだ、\r\nこれから精一杯頑張るぞ！）",
-      "en": "I've been longing to do this kind of work for a while so i'm going to give it my all!"
+      "tl": "I've been longing to do this kind of work for a while so i'm going to give it my all!"
     },
     {
       "jp": "おはようございます！\r\nって、天井社長……？",
-      "en": "Good morning! Eh... President?"
+      "tl": "Good morning! Eh... President?"
     },
     {
       "jp": "おはよう、お前を待っていたぞ",
-      "en": "Morning, I've been waiting for you."
+      "tl": "Morning, I've been waiting for you."
     },
     {
       "jp": "（この２８３プロダクションを束ねる\r\n天井社長……あいかわらずダンディな雰囲気だ）",
-      "en": "(This is 283 production's president who is in charge. As always, he has a professional aura about him.)"
+      "tl": "(This is 283 production's president who is in charge. As always, he has a professional aura about him.)"
     },
     {
       "jp": "お前には今日から、アイドルを\r\nプロデュースしてもらうと伝えていたが……",
-      "en": "From today on, you will be in charge of producing an idol."
+      "tl": "From today on, you will be in charge of producing an idol."
     },
     {
       "jp": "素晴らしい結果を期待させてもらう\r\n私は甘くないぞ",
-      "en": "Let me get straight to the point, I am anticipating the best results from you."
+      "tl": "Let me get straight to the point, I am anticipating the best results from you."
     },
     {
       "jp": "は、はい！　よろしくお願いします！",
-      "en": "Y-yes! I'm in your care!"
+      "tl": "Y-yes! I'm in your care!"
     },
     {
       "jp": "よろしい。では、仕事の説明ははづきに任せて……",
-      "en": "Likewise. Well then, I'll be leaving the explaination of your job to Hazuki-san.."
+      "tl": "Likewise. Well then, I'll be leaving the explaination of your job to Hazuki-san.."
     },
     {
       "jp": "？　はづきさんはどこにも……あっ！？",
-      "en": "Hm? Hazuki-san is here as well...? Ahhh!?"
+      "tl": "Hm? Hazuki-san is here as well...? Ahhh!?"
     },
     {
       "jp": "（そ、ソファの裏で誰かが倒れてる！？）",
-      "en": "I see... someone has fallen asleep behind the sofa!?"
+      "tl": "I see... someone has fallen asleep behind the sofa!?"
     },
     {
       "jp": "……ふわぁ～？\r\nなんですか～急に大きな声出して～……",
-      "en": "Fuwaaa~ what is it~? A huge voice just came out of no where~..."
+      "tl": "Fuwaaa~ what is it~? A huge voice just came out of no where~..."
     },
     {
       "jp": "は、はづき……なぜ床で寝ているんだ",
-      "en": "Hazuki... why is it you're sleeping on the floor?"
+      "tl": "Hazuki... why is it you're sleeping on the floor?"
     },
     {
       "jp": "すみません、ソファへ着く前に\r\n眠気に負けてしまいまして～……",
-      "en": "Sorry~, before I made it to the sofa I ended up falling asleep~"
+      "tl": "Sorry~, before I made it to the sofa I ended up falling asleep~"
     },
     {
       "jp": "せっかくまじめな雰囲気を出したというのに……",
-      "en": "Even though I'm being serious here..."
+      "tl": "Even though I'm being serious here..."
     },
     {
       "jp": "……ともかく！\r\n彼に仕事の説明をしてくれ",
-      "en": "Anyway! Give him an explaination of his job role."
+      "tl": "Anyway! Give him an explaination of his job role."
     },
     {
       "jp": "はい、もちろんです\r\nプロデューサーさん、どうぞ～",
-      "en": "Yes, of course! Producer-san, here~"
+      "tl": "Yes, of course! Producer-san, here~"
     },
     {
       "jp": "ありがとうございます\r\n……あいかわらず、わかりやすくまとまってますね、資料",
-      "en": "Thank you very much! As always, these documents are easy to understand."
+      "tl": "Thank you very much! As always, these documents are easy to understand."
     },
     {
       "jp": "（はづきさん、こういうところは頼れるんだよな……）",
-      "en": "(It looks like I will be able to rely on Hazuki-san...)"
+      "tl": "(It looks like I will be able to rely on Hazuki-san...)"
     },
     {
       "jp": "ありがとうございます\r\nそれじゃあ、さっそくお仕事の説明に入りますね～",
-      "en": "Thank you very much! Well then, let's move on and talk about your job responsiblities, shall we?"
+      "tl": "Thank you very much! Well then, let's move on and talk about your job responsiblities, shall we?"
     },
     {
       "jp": "まず、今回のプロデュースの目標についてですが……",
-      "en": "First of all, our overall goal..."
+      "tl": "First of all, our overall goal..."
     },
     {
       "jp": "ワンダーアイドルノヴァ・グランプリ……\r\n通称『W.I.N.G.』への出場を目指してください",
-      "en": "...is to compete in the Wonder Idol Nova Grand Prix also known as 『W.I.N.G』!"
+      "tl": "...is to compete in the Wonder Idol Nova Grand Prix also known as 『W.I.N.G』!"
     },
     {
       "jp": "『W.I.N.G.』……ですか",
-      "en": "『W.I.N.G』 ... ?"
+      "tl": "『W.I.N.G』 ... ?"
     },
     {
       "jp": "はい\r\n新人アイドルの祭典とも言われる、すごいライブなんです",
-      "en": "Yes, it's a festival for new idols to perform. It's amazing!"
+      "tl": "Yes, it's a festival for new idols to perform. It's amazing!"
     },
     {
       "jp": "祭典と言われるだけあって、この『W.I.N.G.』は\r\n出場資格を手に入れるまでが厳しいんです……",
-      "en": "Needless to say, the qualifications for 『W.I.N.G』 are strict."
+      "tl": "Needless to say, the qualifications for 『W.I.N.G』 are strict."
     },
     {
       "jp": "エントリーしたアイドルは開催前まで、\r\n全４回のシーズンごとに審査を受けます",
-      "en": "Before the start of the event, the idol that is entered into the festival will then be evaluated each passing of the season, four in all."
+      "tl": "Before the start of the event, the idol that is entered into the festival will then be evaluated each passing of the season, four in all."
     },
     {
       "jp": "その時、一定のランクに達していないと、\r\n出場資格を失ってしまうんです",
-      "en": "At the time of the evaluations, if you do not maintain a constant ranking you will lose your qualification to participate."
+      "tl": "At the time of the evaluations, if you do not maintain a constant ranking you will lose your qualification to participate."
     },
     {
       "jp": "ですので、精一杯頑張っていきましょ～！\r\n私もたくさんサポートさせていただきますね～",
-      "en": "Therefore, let's give it our all! I will also be giving you all my support."
+      "tl": "Therefore, let's give it our all! I will also be giving you all my support."
     },
     {
       "jp": "……少しアドバイスをしておくが、\r\nお前は、２８３プロダクションのプロデューサーだ",
-      "en": "A bit of advice... you're now 283 production's producer."
+      "tl": "A bit of advice... you're now 283 production's producer."
     },
     {
       "jp": "担当アイドルと他のアイドルたちを\r\n交流させることも重要になってくる",
-      "en": "It's important for the idol you're responsbile for to interact with other idols."
+      "tl": "It's important for the idol you're responsbile for to interact with other idols."
     },
     {
       "jp": "互いに影響しあうことで目指せる高みもあるだろう",
-      "en": "It's also integral that both of you have a mutual understanding in this to grow."
+      "tl": "It's also integral that both of you have a mutual understanding in this to grow."
     },
     {
       "jp": "まあ、まずは思うようにやってみるといい\r\n結果がついてくるかは、お前とアイドルの頑張り次第だ",
-      "en": "That said, it is up to the idol and you to work hard to ensure good results."
+      "tl": "That said, it is up to the idol and you to work hard to ensure good results."
     },
     {
       "jp": "では、そろそろお仕事に移ってもらいましょうか\r\n今回プロデュースするアイドルは──",
-      "en": "Well then, let's move to the next order of business shall we? This time you will be producing..."
+      "tl": "Well then, let's move to the next order of business shall we? This time you will be producing..."
     },
     {
       "jp": "自分でスカウトして来いか……\r\nはづきさんも社長も、無茶なこと言うなぁ。",
-      "en": "Make a Scout by myself, Hazuki-san and the president always asking the imposible"
+      "tl": "Make a Scout by myself, Hazuki-san and the president always asking the imposible"
     },
     {
       "jp": "（う～ん。ピンとくる子、なかなか見つからない……\r\n場所を変えてみるか）",
-      "en": "(No. I'll know when I find the right girl, and haven't yet.... Maybe I should change where I'm looking?)"
+      "tl": "(No. I'll know when I find the right girl, and haven't yet.... Maybe I should change where I'm looking?)"
     },
     {
       "jp": "（綺麗な歌声が聞こえてくる……）",
-      "en": "(There's someone signing a beautiful melody)"
+      "tl": "(There's someone signing a beautiful melody)"
     },
     {
       "jp": "（あの子、かな……何か惹きつけられる……\r\n声をかけてみるか）",
-      "en": "(Could it be... her? I need to bring something... Let's try talking to her)"
+      "tl": "(Could it be... her? I need to bring something... Let's try talking to her)"
     },
     {
       "jp": "こんにちは、綺麗な歌声だね",
-      "en": "Hello, that's a beautiful voice."
+      "tl": "Hello, that's a beautiful voice."
     },
     {
       "jp": "ほわっ？　あっ、あの……こんにちは\r\n人がいたなんて……気が付きませんでしたっ",
-      "en": "Uwaa? U-um... hello. Sorry, I didn't notice there was someone."
+      "tl": "Uwaa? U-um... hello. Sorry, I didn't notice there was someone."
     },
     {
       "jp": "（この子……独特の雰囲気があるな。癒されるというか\r\n……うん、ピンときたぞ！）",
-      "en": "(This girl... the has a unique air around her. It's like she's healing me... Yup, my intuition hasn't failed me!)"
+      "tl": "(This girl... the has a unique air around her. It's like she's healing me... Yup, my intuition hasn't failed me!)"
     },
     {
       "jp": "突然だけど……\r\n君、アイドルになってみる気はない？",
-      "en": "This is sudden, but... you, don't you want to become an idol?"
+      "tl": "This is sudden, but... you, don't you want to become an idol?"
     },
     {
       "jp": "ほわっ……\r\nえっと……アイドル、ですか？",
-      "en": "Uwaa... um... an idol...?"
+      "tl": "Uwaa... um... an idol...?"
     },
     {
       "jp": "俺はアイドルのプロデューサーで、新人を探してるんだ\r\n君はいつもここで歌を？",
-      "en": "I'm an idol producer, and I'm searching for newcomers. Do you always sing here?"
+      "tl": "I'm an idol producer, and I'm searching for newcomers. Do you always sing here?"
     },
     {
       "jp": "えと、気持ちのいいお天気なので、つい……\r\n歌ってると、鳩さんがよく集まってきてくれますし",
-      "en": "Well, the weather is good, so... I just sing, and Mr. Pigeon will come and gather around me a lot."
+      "tl": "Well, the weather is good, so... I just sing, and Mr. Pigeon will come and gather around me a lot."
     },
     {
       "jp": "鳩さん……そうか、もうファンがいるんだね\r\nどうかな、アイドル、やってみないか？",
-      "en": "Mr. Pigeon... I see, you already have fans, huh. What do you say, won't you give being an idol a try?"
+      "tl": "Mr. Pigeon... I see, you already have fans, huh. What do you say, won't you give being an idol a try?"
     },
     {
       "jp": "ほわ……多分私にはできないと思います\r\n自信ありません……",
-      "en": "Uwaa... I think that that I probable wouldn't be able to do it.... I dont have the confidence."
+      "tl": "Uwaa... I think that that I probable wouldn't be able to do it.... I dont have the confidence."
     },
     {
       "jp": "すみません、せっかく誘ってくれたのに……\r\nじゃあ、これで……",
-      "en": "I'm sorry, even though you tried so hard to scout me... Then, I'll be on my way...."
+      "tl": "I'm sorry, even though you tried so hard to scout me... Then, I'll be on my way...."
     },
     {
       "jp": "（何日か探して回ったけど、\r\nピンときたのはこの公園にいた……あっ、あの子だ……）",
-      "en": "(I kept searching for several days, but my intuition told me what I needed was in that park.... Ah, it's that girl....)"
+      "tl": "(I kept searching for several days, but my intuition told me what I needed was in that park.... Ah, it's that girl....)"
     },
     {
       "jp": "アイドル……私がアイドルなんて……",
-      "en": "Me... becoming an idol..."
+      "tl": "Me... becoming an idol..."
     },
     {
       "jp": "やあ、また会えたね\r\nアイドルの話、もう一度考えてみてほしいんだ",
-      "en": "Hey, we see again about becoming an idol... I would like if you consider it again "
+      "tl": "Hey, we see again about becoming an idol... I would like if you consider it again "
     },
     {
       "jp": "君の中には光り輝くものがある\r\nアイドルになって、今までとは違う世界を見てみないか？",
-      "en": "If there's a bright in your heart, would you like to see a world different from anything you have seen?"
+      "tl": "If there's a bright in your heart, would you like to see a world different from anything you have seen?"
     },
     {
       "jp": "今までとは違う……",
-      "en": "Different from what I've seen before...?"
+      "tl": "Different from what I've seen before...?"
     },
     {
       "jp": "…………はい",
-      "en": ".........yes"
+      "tl": ".........yes"
     },
     {
       "jp": "私、アイドルやりますっ",
-      "en": "I will become an Idol"
+      "tl": "I will become an Idol"
     },
     {
       "jp": "本当？　よかった！！\r\n君の名前、聞いてもいいかな？",
-      "en": "Really? I'm glad, may I hear your name?"
+      "tl": "Really? I'm glad, may I hear your name?"
     },
     {
       "jp": "櫻木真乃、１6歳です\r\nこれからよろしくお願いしますね",
-      "en": "Mano Sakuragi, 16 years old. let's give our best from now on"
+      "tl": "Mano Sakuragi, 16 years old. let's give our best from now on"
     }
   ]
 }
